# pink-workshop-app-start

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py
app/: schemas.py  services.py  utils.py
app/static/css/: styles.css
app/templates/: base.html  index.html  run.html
